<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="4"
    android:layout_margin="10dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/itemTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/itemMaestro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maestro"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/itemFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha_entrega"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <ImageButton
            android:id="@+id/btnItemBorrar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_baseline_delete_24"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>